--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.26",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
@@ -56,6 +58,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^16.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-use": "^17.6.0",
     "recharts": "^2.15.4",
