--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "dev:https": "next dev --experimental-https"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
