--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
